@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.435 2005/10/23 23:51:52 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.436 2005/10/24 04:34:43 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
@@ -19,6 +19,8 @@
   src/GLIArchitectureTemplate.py:
   added copy_pkg_to_chroot()
   added debug code to dynamic-stage3
+  switch dynamic-stage3 to new method
+  lots of bug fixes from adding debug code
 
   22 Oct 2005; Preston Cody <codeman@gentoo.org>
   webgli initial bootloader support + changed make.conf.
